# datascience-cookiecutter

./: Makefile  README.md  pyproject.toml  test.py
datascience_cookiecutter/: __init__.py  __main__.py  cli.py  folderbuilder.py  templates.py
src/datascience_cookiecutter/: __init__.py  __main__.py  folderbuilder.py  templates.py
tests/: test_datascience_cookiecutter.py
