[project]
name = "cookietest"
version = "0.1.0"
description = ""
authors = [
	{name = "", email = ""},
]
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "click>=8.1.3",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
	"Environment :: Console",
    "Typing :: Typed",
]

[project.optional-dependencies]
lint = [
    "pytest>=7.4.0",
	"ruff>=0.0.275",
	"black>=23.3.0",
	"isort>=5.11.5",
	"mypy>=1.4.1",
]

[tool.urls]
GitHub = "https://github.com/raoulg/datascience-cookiecutter"

[tool.pdm.scripts]
cookiecutter = {call = "datascience_cookiecutter.cli:main", deps = ["click"]}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
