[project]
name = "datascience_cookiecutter"
version = "0.3"
description = ""
authors = [
	{name = "", email = ""},
]
dependencies = [
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "click>=8.1.3",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
	"Environment :: Console",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.optional-dependencies]
lint = [
    "pytest>=7.4.0",
	"ruff>=0.0.275",
	"black>=23.3.0",
	"isort>=5.11.5",
	"mypy>=1.4.1",
]

[project.scripts]
cookiecutter = "datascience_cookiecutter.__main__:create_project"

[tool.pdm.urls]
GitHub = "https://github.com/raoulg/datascience-cookiecutter"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_unreachable = true
pretty = true
show_error_codes = true