[project]
name = "datascience_cookiecutter"
version = "0.4.1"
description = ""
authors = [
	{name = "Raoul Grouls", email = "Raoul.Grouls@han.nl"},
]
dependencies = [
    "pydantic>=2.0.2",
    "loguru>=0.7.0",
    "click>=8.1.4",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
	"Environment :: Console",
    "Topic :: Software Development",
    "Typing :: Typed",
]

[project.optional-dependencies]
lint = [
    "pytest>=7.4.0",
	"ruff>=0.0.278",
	"isort>=5.12.0",
]

[project.scripts]
cookiecutter = "datascience_cookiecutter.__main__:create_project"

[project.urls]
GitHub = "https://github.com/raoulg/datascience-cookiecutter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool]
rye = { dev-dependencies = [
    "pyright>=1.1.386",
] }

[tool.hatch.build.targets.wheel]
packages = ["src/datascience_cookiecutter"]
